Add new about section
and remove the old one.

Info.kt is kept until the changelog isn't renewed as well

--- a/AnkiDroid/src/main/AndroidManifest.xml
+++ b/AnkiDroid/src/main/AndroidManifest.xml
@@ -269,7 +269,7 @@
             />
         <activity
             android:name="com.ichi2.anki.Info"
-            android:label="@string/about_title"
+            android:label="@string/pref_cat_about_title"
             android:exported="false"
             android:configChanges="locale|uiMode"
             />
