--- a/AnkiDroid/src/main/AndroidManifest.xml
+++ b/AnkiDroid/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         android:resizeableActivity="true"
         android:supportsRtl="true"
         android:theme="@style/Theme_Light"
+        android:localeConfig="@xml/locale_config"
         android:manageSpaceActivity=".ui.windows.managespace.ManageSpaceActivity"
         >
         <activity
@@ -418,6 +419,14 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             tools:ignore="LockedOrientationActivity" />
 
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
         <!-- Service to perform web API queries -->
         <service android:name="com.ichi2.widget.AnkiDroidWidgetSmall$UpdateService" />
 
