--- a/AnkiDroid/build.gradle
+++ b/AnkiDroid/build.gradle
@@ -259,6 +259,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.9.0"
     implementation 'androidx.exifinterface:exifinterface:1.3.5'
     implementation "androidx.fragment:fragment-ktx:$fragments_version"
+    implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation "androidx.preference:preference-ktx:1.2.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.sqlite:sqlite-framework:2.2.0'
